# state_machines_executor

./: .gitignore  README.md  TODO.md  main.py  number_mul_three.py  number_mul_three_plus_one.py  number_plus_three.py  numbre_mul_three_plus_two.py  pull_req_test.txt  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: pytest.yml  run_pytest.yml
_legacy/examples/: number_mul_three.py  number_mul_three_plus_one.py  number_mul_three_plus_two.py  number_plus_three.py
_legacy/state_machines/: mealy_machine.py  moore_machine.py  state.py
examples/: mealy_mul_three.py  moore_plus_three.py  number_mul_three.py  number_mul_three_plus_one.py  number_mul_three_plus_two.py  number_plus_three.py  simple.py
first_uniclass/: moore_class.py
prototype_examples/: number_mul_three.py  number_mul_three_plus_one.py  number_plus_three.py  numbre_mul_three_plus_two.py
src/gui/: colors_tuples.py  main.py
src/state_machines/: __init__.py
state_machines/: __init__.py  mealy_machine.py  mealy_state.py  mealy_step.py  moore_machine.py
state_machines/old/: mealy_machine.py  moore_machine.py
tests/: conftest.py  test_mealy_machine.py
tests/mealy/: test_binary_operations.py  test_machine_api.py  test_mealy_machine_api.py
tests/mealy_machine/: test_binary_operations.py  test_mealy_machine.py  test_mealy_machine_api.py  test_number_mul_three.py  test_number_mul_three_plus_one.py  test_number_mul_three_plus_two.py
tests/moore/: test_binary_operations.py  test_machine_api.py  test_moore_binary_machine.py  (+1 more)
uniclasses/: mealy_machine.py  moore_machine.py
(+41 files in other folders)
